--- a/css/components/section.css
+++ b/css/components/section.css
@@ -31,11 +31,14 @@
 
 .section.-projects{
     background-image: url(../../assets/img/background\ 2.png);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .section.-projects .wrapper{
     display: flex;
-    justify-content: center;
+    flex-wrap: wrap;
 }
 
 
