--- a/css/components/box-tittle.css
+++ b/css/components/box-tittle.css
@@ -1,7 +1,9 @@
 .box-title{ 
     display: inline-block;
     background-color: #181817;
-    border-radius: 5px;
     padding: 47px 123px;
     text-align: center;
 }
+
+/*Div Class*/
+
