--- a/css/components/skills-tec.css
+++ b/css/components/skills-tec.css
@@ -1,7 +1,7 @@
 .skills-tec{
     display: flex;  
     align-items: center;
-    margin-top: 20px;
+    text-align: center;
 }
 
 .skills-tec .icon{
