--- a/css/components/main-project.css
+++ b/css/components/main-project.css
@@ -1,25 +1,18 @@
 .main-project{
-    display: inline-block;
-    margin-right: 104px;
+    text-align: center;
 }
 
-.main-project:last-child{
-    margin: 0px;
-}
-
-.main-project .wrapper{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.main-project .wrapper .icon{
+.main-project .icon{
+    box-sizing: border-box;
     width: 250px;
     height: 250px;
     background-color: black;
 }
 
 .main-project .description{
+    font-family: "Wix Madefor Text" Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    font-weight: 400px;
     margin-top: 10px;
     color: white;
 }
