--- a/css/components/main-section.css
+++ b/css/components/main-section.css
@@ -5,8 +5,10 @@
 
 .main-section .main-title{
     margin-bottom: 50px;
-   
 }
+
+
+
 
 .main-section.-skill{
     background-color: #999999;
@@ -32,11 +34,31 @@
     margin-top: 150px;
 }
 
+
+
+
+
 .main-section.-projects{
     background-image: url(../../assets/img/background\ 2.png);
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.main-section.-projects .wrapper{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.main-section.main-section.-projects .main-project{
+    margin-right: 104px;
+    margin-bottom: 50px;
+}
+
+.main-section.main-section.-projects .main-project:nth-child(3n){
+    margin-right: 0;
 }
 
 
