Add 'Backgroun-repeat: no repeat' to Main-Backgroun on Main-banner

--- a/css/components/main-banner.css
+++ b/css/components/main-banner.css
@@ -4,6 +4,7 @@
     height: 690px;
     background-image: url(../../assets/img/background.jpeg);
     background-size: 100%;
+    background-repeat: no-repeat;
     border-bottom: 10px solid gray;
 }
 
