Add config flex on the div right insed of the component Skills tec

--- a/css/components/skills-tec.css
+++ b/css/components/skills-tec.css
@@ -4,6 +4,10 @@
     text-align: center;
 }
 
+.skills-tec .rigth{
+    display: flex;
+    flex-direction: column;
+}
 .skills-tec .icon{
     margin-right: 15px;
     width: 100px;
