--- a/css/components/main-section.css
+++ b/css/components/main-section.css
@@ -38,7 +38,7 @@
     background-image: url(../../assets/img/background\ 2.png);
     display: flex;
     flex-direction: column;
-    align-items: center;
+    text-align: center;
 }
 
 .main-section.-projects .wrapper{
@@ -47,7 +47,7 @@
     justify-content: center;
 }
 
-.main-section.main-section.-projects .main-project{
+.main-section.-projects .main-project{
     margin-right: 104px;
     margin-bottom: 50px;
 }
