--- a/css/components/main-section.css
+++ b/css/components/main-section.css
@@ -39,6 +39,7 @@
     display: flex;
     flex-direction: column;
     text-align: center;
+    border-bottom: 10px solid #444444;
 }
 
 .main-section.-projects .wrapper{
@@ -55,6 +56,36 @@
 .main-section.-projects .main-project:nth-child(3n){
     margin-right: 0;
 }
+
+
+
+.main-section.-aboutme{
+    display: flex;
+    flex-direction: column;
+    box-sizing: border-box;
+    background-image: url(../../assets/img/aboutmebackground..png);
+    background-color: black;
+    background-size: 100%;
+    height: 800px;
+    align-items: center;
+    border-bottom: 10px solid #444 ;
+}
+
+.main-section.-aboutme .center{
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+
+.main-section.main-section.-aboutme .rei{
+    display: flex;
+    width: 100%;
+    justify-content: right;
+}
+
+
+
+
 
 
 
